styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
html {
    /* display: flex; */ /*!!? \_(o|o)_/  */
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

body {
    display: flex;
    /* height: 100vh; */
    font-family: Roboto, sans-serif;
    background-color: #f3ebe9;
    margin: auto;
    justify-content: center;
}

.page {
    display: flex;
    flex-direction: column;
    width: 1516px;
    min-width: 768px;
}

.header {
    display: flex;
    flex-direction: column;
    align-items: space-between;
    background: #1d3b3d;
    color: #f3ebe9;
    padding: 16px 100px;
}

.top {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding: 0px 100px;
}

ul {
    display: flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
    gap: 24px;
}

a {
    text-decoration: none;
    color: #f3ebe9;
    font-size: 18px;
    transition: color 0.3s;
}

a:hover {
    color: #3a82f6;
}

.container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0 100px;
    margin-bottom: 16px;
    margin-top: 32px;
}

.signup {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 500px;
}

.image {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin-top: 8px;
}

h1 {
    margin: 0;
    padding: 0;
    font-size: 48px;
    font-weight: 900;
}

button {
    border: none;
    border-radius: 8px;
    padding: 10px 20px;
    color: #f9faf8;
    background-color: #3a82f6;
    font-weight: 600;
    font-family: Roboto, sans-serif;
    font-size: 16px;
    cursor: pointer;
    transition: background-color 0.3s;
    /* margin-bottom: 12px; */
}

button:hover {
    background-color: #2b6cb0;
}

.credentials {
    margin-top: auto;
}

.rand-info {
    /*TODO: combine with header*/
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-top: 24px;
    padding: 0 100px;
}

.random-header {
    text-align: center;
    margin-bottom: 24px;
}
.item-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-around;
    flex: 1;
}

.item {
    display: flex;
    flex-direction: column;
    width: 162px;
    height: 162px;
    outline: #3a82f6 solid;
    border-radius: 8px;
    margin: 0px 32px 76px 32px;
}
.subtext {
    margin-top: 12px;
    padding: 0;
    text-align: center;
}

